--- a/rsbib_paper.tex
+++ b/rsbib_paper.tex
@@ -1,6 +1,9 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Neuroimage-like layout
-\documentclass[12pt,3p]{elsarticle}
+% Neuroimage-like layout
+%\documentclass[12pt,3p,review]{elsarticle}
+\documentclass[12pt,3p,review,number]{elsarticle}
+%\documentclass[5p]{elsarticle}
 %\documentclass[5p]{elsarticle}
 % For kindle
 %\documentclass[1p,12pt]{elsarticle}
@@ -65,6 +68,7 @@ Blacksburg, Virginia}
 
 \begin{abstract}
     Some cool stuff about why the Child Mind Librarian is so freaking cool ...
+    and why we care, and other things of relative importance.
 \end{abstract}
 
 \begin{keyword}
@@ -77,35 +81,29 @@ Blacksburg, Virginia}
 
 
 \sloppy % Fed up with messed-up line breaks
-{
-%\clearpage
-\section*{References} \small \bibliographystyle{elsarticle-num-names}
-\bibliography{biblio} }
-
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \section{Introduction}
 
-Since its initial observation in 1995 {Biswal 1995}, resting state functional
-magnetic resonance imaging (R-fMRI) has exploded in popularity as a technique
-for studying the brain’s functional architecture. Although initially plagued by
-	controversies related to the physiological underpinnings and
-	unconstrained nature of R-fMRI {Lund 2001}{Morcom 2007}, it has
-	persevered to become a standard assessment in basic, clinical and
-	cognitive neurosciences {Fox 2010}{Kelly 2012}.  The result is a
-	burgeoning literature dedicated to R-fMRI that is quickly becoming
-	unwieldy for researchers to navigate. The Child Mind Institute (CMI)
-	Librarian initiative addresses this challenge by providing a
-	hand-curated reference library of R-fMRI literature
-	(http://www.mendeley.com/profiles/cmi-librarian). This library consists
-	of 1,721 publications (as of December 24, 2012) and requisite metadata
-	to facilitate the systematic review of its contents. We inaugurate the
-	availability of this open resource by performing a bibliometric analysis
-	to assess the current state of R-fMRI literature.
+Since its initial observation in 1995 \cite{Biswal1995}, resting state
+functional magnetic resonance imaging (R-fMRI) has exploded in popularity as a
+technique for studying the brain’s functional architecture. Although initially
+plagued by controversies related to the physiological underpinnings and
+unconstrained nature of R-fMRI \cite{Lund2001,Morcom2007}, it has persevered to
+become a standard assessment in basic, clinical and cognitive neurosciences
+\cite{Fox2010,Kelly2012}.  The result is a burgeoning literature dedicated to
+R-fMRI that is quickly becoming unwieldy for researchers to navigate. The Child
+Mind Institute (CMI) Librarian initiative addresses this challenge by providing
+a hand-curated reference library of R-fMRI literature
+(http://www.mendeley.com/profiles/cmi-librarian). This library consists of 1,721
+publications (as of December 24, 2012) and requisite metadata to facilitate the
+systematic review of its contents. We inaugurate the availability of this open
+resource by performing a bibliometric analysis to assess the current state of
+R-fMRI literature.
 
 Bibliometrics involves the application of mathematics and statistical methods to
 a body of literature to illuminate its course of development and measure its
-impact {Pritchard 1969}. Although primarily concerned with analyzing citations
+impact \cite{Pritchard1969}. Although primarily concerned with analyzing citations
 to estimate the impact of researchers and particular papers within the field,
 bibliometrics can also identify common themes within in the literature.
 Bibliometric analyses differ from more standard literature reviews in that they
@@ -136,107 +134,110 @@ of R-fMRI.
 The CMI Librarian initiative has constructed a comprehensive database of R-fMRI
 publications that is maintained in Mendeley (Mendeley, Inc., New York, NY). The
 database is updated monthly using PubMed-based searches that are run in Sente
-(Third Street Software, Inc., Denver, CO) with the following query: \texttt{``resting
-state fMRI'' OR ``intrinsic functional connectivity'' OR ``rest AND functional
-connectivity'' OR ``fmri AND default mode network''}. Abstracts corresponding to
-publications returned from the search are hand vetted by CMI Librarian staff to
-exclude papers that are duplicates, do not have an English language abstract, or
-are not explicitly related to fMRI and resting state. Based on the content of
-the abstracts, the articles are then assigned tags based on their topic areas.
-Articles are marked as \emph{clinical} if they deal with a clinical population of any
-kind, and are additionally tagged with the specific disorder/population. The
-\emph{basic neuroscience} tag is applied to papers that focus on non-clinical
-populations and are additionally categorized as \emph{brain and behavior},
-\emph{functional anatomy}, or \emph{multimodal}. The latter refers to papers that integrate fMRI with an
+(Third Street Software, Inc., Denver, CO) with the following query:
+\texttt{``resting state fMRI'' OR ``intrinsic functional connectivity'' OR
+``rest AND functional connectivity'' OR ``fmri AND default mode network''}.
+Abstracts corresponding to publications returned from the search are hand vetted
+by CMI Librarian staff to exclude papers that are duplicates, do not have an
+English language abstract, or are not explicitly related to fMRI and resting
+state. Based on the content of the abstracts, the articles are then assigned
+tags based on their topic areas.  Articles are marked as \emph{clinical} if they
+deal with a clinical population of any kind, and are additionally tagged with
+the specific disorder/population. The \emph{basic neuroscience} tag is applied
+to papers that focus on non-clinical populations and are additionally
+categorized as \emph{brain and behavior}, \emph{functional anatomy}, or
+\emph{multimodal}. The latter refers to papers that integrate fMRI with an
 additional imaging modality. There are additional tags for papers that
 incorporate genetics (\emph{genetics}) and those that include animal research
-(\emph{animal models}). Journal articles that are mainly focused on a particular analytical or
-imaging technique are classified with the \emph{methodology} tag. Finally there are
-tags for reviews and meta-analyses (\emph{review/meta-analysis}) and papers that use
-data from the 1000 Functional Connectomes and International Neuroimaging
-Data-sharing Initiative (\emph{1000 Functional Connectomes}). 
+(\emph{animal models}). Journal articles that are mainly focused on a particular
+analytical or imaging technique are classified with the \emph{methodology} tag.
+Finally there are tags for reviews and meta-analyses
+(\emph{review/meta-analysis}) and papers that use data from the 1000 Functional
+Connectomes and International Neuroimaging Data-sharing Initiative (\emph{1000
+Functional Connectomes}). 
 
 \subsection{Publication Trends}
 Publication rates, venues, subject areas, and open access policies were measured
 and analyzed using metadata found in the CMI Library and complementary PubMed
-queries. The growth rates of literature volume over time were found for
-R-fMRI and compared to that for all of fMRI - , which is the mother
-discipline of R-fMRI. First, the CMI Librarian was aggregated by year to
-find each year’s publication count. Then, the following query was used on PubMed
-to find the number of articles in all of fMRI per year: \texttt{(``fMRI'' or
-``functional
+queries. The growth rates of literature volume over time were found for R-fMRI
+and compared to that for all of fMRI - the mother discipline of
+R-fMRI. First, the CMI Librarian was aggregated by year to find each year’s
+publication count. Then, the following query was used on PubMed to find the
+number of articles in all of fMRI per year: \texttt{(``fMRI'' or ``functional
 magnetic resonance imaging'') and (``YEAR''[Publication Date])}.  The cumulative
 sums were then calculated to find the total literature volume over time.
 
 Growth rates were modeled with exponential functions. An exponential growth rate
-indicates that the literature’s growth rate $\slantfrac{dV}{dt}$ is proportional to its
-volume ($V$), $\slantfrac{dV}{dt} \propto V$.  To model publication growth, piecewise exponential
-functions of the form $V(t)=V_0 e^{Rt}$ were fitted over the intervals
-1/1/1994 - 12/31/2005 and 1/1/2006 - 12/31/2012 for both
-R-fMRI and fMRI. The year 1994 was chosen as the first point because
-growth is subexponential before this period. Between 1994 and 2012, growth
-is super-exponential if fitted over the full period; so two piecewise curves
-were fitted. The break point at 2006 was chosen by minimizing model error over
-the full period. 
+indicates that the literature’s growth rate $\slantfrac{dV}{dt}$ is proportional
+to its volume ($V$), $\slantfrac{dV}{dt} \propto V$.  To model publication
+growth, piecewise exponential functions of the form $V(t)=V_0 e^{Rt}$ were
+fitted over the intervals Janurary 1, 1994 - December 31, 2005 and 
+Janurary 1, 2006 - December 31, 2012 for
+both R-fMRI and fMRI. The year 1994 was chosen as the first point because growth
+is subexponential before this period. Between 1994 and 2012, growth is
+super-exponential if fitted over the full period; so two piecewise curves were
+fitted. The break point at 2006 was chosen by minimizing model error over the
+full period. 
 
 Several additional publication trend statistics were computed from CMI Librarian
 and PubMed metadata. Counts of publications by journal were found directly from
 CMI Librarian data. Clinical applications were aggregated from the library’s
-hand-curated tag information. Open access rates for R-fMRIR-fMRI and all of
+hand-curated tag information. Open access rates for R-fMRI and all of
 fMRI were found from PubMed. 
 
 Using address information from the CMI Librarian, a density-equalizing map, or
 cartogram, was generated on the publications’ correspondence addresses with the
-ScapeToad implementation of the Gastner/Newman diffusion-based algorithm. [11]
-The goal of the cartogram, and the Gastner/Newman algorithm in particular, is to
-plot a geographical map such that the density of the publications by country is
-constant per unit area, and the boundaries of each country are still
-recognizable.
+ScapeToad (http://scapetoad.choros.ch) implementation of the Gastner/Newman
+diffusion-based algorithm \cite{Gastner2004}.  The goal of the cartogram, and
+the Gastner/Newman algorithm in particular, is to plot a geographical map such
+that the density of the publications by country is constant per unit area, and
+the boundaries of each country are still recognizable.
 
 \subsection{Term Frequency Analysis}
 A bag of words model was used to learn about the field’s experimental methods
 and areas of focus. A bag of words model assumes that all of the words in a
 corpus are statistically independent, regardless of whether they appear in the
 same sentence or publication.  Under this model, a term’s significance can be
-measured simply by counting its occurrences.
+measured simply by counting its occurrences. \textcolor{blue}{Should we reference
+a text mining review here? -cc}
 
 Terms of interest were derived from n-grams (a phrase consisting of $n$ words)
-from neuroimaging methods, cognitive ontology [3, 5], and the PubBrain lexicon
-[6]. N-grams from cognitive ontology and the PubBrain lexicon were found from
-their respective online sources. A domain expert (RCC) manually generated the
-list of terms for neuroimaging methods. The final sets of n-grams were found by
-iteratively testing a candidate set, then combining synonyms and compound terms
-to form a new candidate set.
+from neuroimaging methods, cognitive ontology \cite{Poldrack2011}, and the
+PubBrain lexicon (http://www.pubbrain.org). N-grams from cognitive ontology and
+the PubBrain lexicon were found from their respective online sources. A domain
+expert (RCC) manually generated the list of terms for neuroimaging methods. The
+final sets of n-grams were found by iteratively testing a candidate set, then
+combining synonyms and compound terms to form a new candidate set.
 
-For each term, conditional term frequency (conditional-tf) was computed as the
+For each term, conditional term frequency (conditional-$t\!f$) was computed as the
 median ratio of term count to total word count in each publication that
-contained the term of interest. Document frequency (df) for each term was
-computed as the number of documents containing the term. Terms with high df are
-popular across the corpus, while terms with high conditional-tf occur often in
+contained the term of interest. Document frequency ($d\!f$) for each term was
+computed as the number of documents containing the term. Terms with high $d\!f$ are
+popular across the corpus, while terms with high conditional-$t\!f$ occur often in
 the documents in which they appear.  
 
 \subsection{Prevalence Of Methods} 
-A Na\"ive Bayes model was used to determine the prevalence of various analysis methods in
-the literature. In particular, this model was used to discriminate between
-seed-based correlation, ICA, clustering, graph theory, and machine learning
-methods. First, a small training set of 10 publications was manually created.
-From this training set, important features were derived by finding tokens and
-n-grams with high values of the $\chi^2$ statistic, which is used as a proxy
-for information gain. (Quinlan, Induction of Decision Trees.) A term frequency
-	matrix was then constructed, relating each publication to the frequency
-	of each term contained in the publication. Logarithmic term frequencies
-	($\log{t\!f}$) were used to prevent a single term from dominating the model.
-	Each publication’s vector was normalized to unit length to mitigate the
-	effect of publications that contain too many or too few terms. This term
-	frequency matrix was used to train a Na\"ive Bayes model. Finally, 213
-	additional publications were classified by hand and used to test the
-	classification accuracy of the model.
+A Na\"ive Bayes model was used to determine the prevalence of various analysis
+methods in the literature. \textcolor{blue}{Include a citation for this?} In particular, this model was used to discriminate
+papers that used seed-based correlation, ICA, clustering, graph theory, and machine
+learning methods. First, a small training set of 10 publications was manually
+created.  From this training set, important features were derived by finding
+tokens and n-grams with high values of the $\chi^2$ statistic, which is used as
+a proxy for information gain \cite{Quinlan86}. A term
+frequency matrix was then constructed, relating each publication to the
+frequency of each term contained in the publication. Logarithmic term
+frequencies ($\log{t\!f}$) were used to prevent a single term from dominating
+the model.  Each publication’s vector was normalized to unit length to mitigate
+the effect of publications that contain too many or too few terms. This term
+frequency matrix was used to train a Na\"ive Bayes model. Finally, 213
+additional publications were classified by hand and used to test the
+classification accuracy of the model.
 
 \subsection{Citation Analysis}
 Publications and the citations that link them were modeled as a directed graph
-to characterize their relationships and ``small world'' nature [10]. A directed
-graph is a general framework used to represent relationships between nodes
-(publications) using edges (citations), which each point from one node to
+to characterize their relationships and ``small world'' nature \cite{Watts1998}.
+A directed graph is a general framework used to represent relationships between
+nodes (publications) using edges (citations), which each point from one node to
 another.
 
 First, PDF files corresponding to the titles in the CMI Librarian were
@@ -253,40 +254,39 @@ true matches was set to 0.9, resulting in 17,983 citations.
 
 Using the citations found by the fuzzy search, a graph was constructed of the
 CMI Librarian publications (nodes) and the citations between them (edges). From
-this graph, the most central nodes were found using the NetworkX pagerank
-implementation {Hagberg 2008}. Pagerank, a variant of eigenvector centrality,
-aims to find the steady state probability of a random walk reaching each node
-{Brin 1998}. These solutions are given by the equation:
+this graph, the most central nodes were found using the pagerank implementation
+in NetworkX \cite{Hagberg2008}. Pagerank, a variant of eigenvector
+centrality, aims to find the steady state probability of a random walk reaching
+each node \cite{Page1999}. These solutions are given by the equation:
 
 \begin{equation}
 P\!r(p_i)=\frac{1-d}{N} + d\!\sum_{p_j \in M(p_i)}\frac{P\!r(p_i)}{L(p_j)}
 \end{equation}
 
-\noindent where $N$ is number of nodes, $d$ is the
-probability of continuing the random walk, $M(p)$ is the set of pages that link to
-node $p$, and $L(p)$ is the number of outbound edges from $p$. The solutions,
-$P\!r(p_i)$,
-are the dominant eigenvector of a modified adjacency matrix, and can be found
-with the power method.
+\noindent where $N$ is number of nodes, $d$ is the probability of continuing the
+random walk, $M(p)$ is the set of pages that link to node $p$, and $L(p)$ is the
+number of outbound edges from $p$. The solutions, $P\!r(p_i)$, are the dominant
+eigenvector of a modified adjacency matrix, and can be found with the power
+method.
 
-Finally, a jackknife procedure {Quenouille 1956} was performed to reduce the
-variance of the pageranks and to quantify their sensitivity to choices of
-fuzzy-search parameters. For each of over 1,000 replicates, 20\% of the edges were randomly
-deleted, and Pagerank was calculated.  The pagerank mean
-and standard error over the jackknifes were reported,which is an overestimate of the true procedure error.  
-Additionally, the graph's mean shortest path length and mean clustering coefficient was
-calculated in a seperate analysis.
+Finally, a jackknife procedure \cite{Quenouille1956} was performed to reduce the
+variance of the Pageranks and to quantify their sensitivity to choices of
+fuzzy-search parameters. For each of over 1,000 replicates, 20\% of the edges
+were randomly deleted, and Pagerank was calculated.  The Pagerank mean and
+standard error over the jackknifes were reported, which is an overestimate of the
+true procedure error.  Additionally, the graph's mean shortest path length and
+mean clustering coefficient was calculated in a seperate analysis.
 
 
 \subsection{Graph Analysis of Co-authorships}
 Collaborative relationships between authors of R-fMRI literature can be
-characterized by co-authorships. A graph was constructed from the CMI Librarian data in which each
-node corresponds to an author and edges represent co-authorships, weighted by
-the number of papers that the two authors appear on. From this graph, we
-calculated average path length, clustering coefficient, Pagerank centrality,
-and the quantity of disjoint sets. Additionally, we tested for graph robustness
-by repeatedly removing authors and publications and measuring graph
-connectivity.
+characterized by co-authorships. A graph was constructed from the CMI Librarian
+data in which each node corresponds to an author and edges represent
+co-authorships, weighted by the number of papers that the two authors appear on.
+From this graph, we calculated average path length, clustering coefficient,
+Pagerank centrality, and the quantity of disjoint sets. Additionally, we tested
+for graph robustness by repeatedly removing authors and publications and
+measuring graph connectivity.
 
 \subsection{Working Groups}
 We defined working groups as sets of researchers who frequently publish together
@@ -294,6 +294,8 @@ and, once found, the publication patterns of these groups were examined. In
 order to find these groups, a greedy community-detection algorithm was developed
 that uses the intersection of researchers’ publication sets to measure their
 similarity.
+
+\textcolor{blue}{\textbf ALGORITHM GOES HERE}
 
 The procedure for identifying author working groups begins by repeatedly seeding
 a new working group with the author with the most publications (lines 2-3).
@@ -303,7 +305,7 @@ and is a co-author on at least 30\% of the publications authored by the members
 of the working group (line 7), then the author is added to the working group
 (line 6). Otherwise, the working group is closed and considered for inclusion in
 the results. If the sum of all papers in common across the candidate working
-group is greater than 50, and the working group has less than 20% of authors in
+group is greater than 50, and the working group has less than 20\% of authors in
 common with any other working group (line 8), then it is included in the results
 (line 9).
 
@@ -319,6 +321,8 @@ found to be 26\% and 17\% during the same time periods. Figure 1 shows the growt
 of each literature, and represents a total of 28,434 fMRI publications and 1,721
 R-fMRI publications. Additionally, 39\% of R-fMRI publications were determined to
 be open access, compared to 31\% in all of fMRI.
+
+
 
 The top 20 publication outlets for R-fMRI publications accounted for 59\% (1017)
 of the CMI R-fMRI library as shown in Fig. 2. This list is dominated by three
@@ -379,10 +383,10 @@ the most discussed brain regions.
 \subsection{Methods Analysis}
 
 The accuracy of the Na\"ive Bayes model in inferring
-algorithmic methods is shown in \ref{??}.
+algorithmic methods is shown in ??.
 
 The terms used as features, along with their $\chi^2$ values, are shown in
-\ref{??}.
+??.
 
 Figure 6 shows growth over time of algorithmic methods in R-fMRI literature.
 Seed-based correlation is by far the most common method, accounting for nearly
@@ -422,14 +426,14 @@ was 0.11.
 
 Working group authors (number of publications in corpus by author):
 \begin{enumerate}
-\item Michael P. Milham(41), Clare Kelly(36), F. Xavier Castellanos(37), and
-Bharat Biswal(36) 
-\item Tianzi Jiang(35), Kun-Cheng Li(27), Chunshui Yu(19),
-Li-Xia Tian(18), Yuan Zhou(15), and Yong Liu(15) 
-\item Qi-Yong Gong(35), Yi-Jun Liu(21), Wei Liao(20), Hua-fu Chen(20),
-Guang-Ming Lu(18), Zhiqiang Zhang(17), and Yuan Zhong (13) 
-\item Bradley L. Schlaggar(19), Steven E. Petersen(16), Alexander L.
-Cohen(13), Damien Fair(13), Nico U. F. Dosenbach(10) and Fran M. Miezin(10)
+\item Michael P. Milham (41), Clare Kelly (36), F. Xavier Castellanos (37), and
+Bharat Biswal (36) 
+\item Tianzi Jiang (35), Kun-Cheng Li (27), Chunshui Yu (19),
+Li-Xia Tian (18), Yuan Zhou (15), and Yong Liu (15) 
+\item Qi-Yong Gong (35), Yi-Jun Liu (21), Wei Liao (20), Hua-fu Chen (20),
+Guang-Ming Lu (18), Zhiqiang Zhang (17), and Yuan Zhong (13) 
+\item Bradley L. Schlaggar (19), Steven E. Petersen (16), Alexander L.
+Cohen (13), Damien Fair (13), Nico U. F. Dosenbach (10) and Fran M. Miezin (10)
 \end{enumerate}
 
 \section{Discussion}
@@ -524,7 +528,7 @@ activity correlated between functional regions—is present not only during task
 but also during R-fMRI. Resting state functional connectivity had been observed
 in clinical settings for a long time using EEG, which measures frequency bands,
 and PET, which measures glucose metabolism. However, this was the first time it
-was observed in the complex FMRI-measured BOLD signal, which lacks clear
+was observed in the complex fMRI-measured BOLD signal, which lacks clear
 physiological underpinning. Biswal appears in a top working group and in the
 list of highest impact authors. Functional connectivity, first demonstrated with
 R-fMRI in this publication, is among the most frequently occurring terms in the
@@ -578,5 +582,13 @@ other rapidly-growing fields such as genetics.
 
 \section{Acknowledgements}
 This research was supported by the Child Mind Institute Endeavor Scientist program.
+
+{
+%\clearpage
+\section*{References}
+%\small
+\bibliographystyle{elsarticle-num-names}
+\bibliography{rsbib_paper} 
+}
 
 \end{document}
