making figures pretty

--- a/rsbib_paper.tex
+++ b/rsbib_paper.tex
@@ -389,7 +389,8 @@ determined to be open access, compared to 31\% in all of fMRI.
 %{{{------ Figure 1 -----}}}
 \begin{figure}
   \begin{center}
-    \includegraphics[width=\linewidth]{figures/overall_growth}%
+    \includegraphics[]{figures/overall_growth}%
+    %\includegraphics[width=\linewidth]{figures/overall_growth}%
     %\includegraphics[width=.5\linewidth]{figures/overall_growth}%
     \caption{The growth of resting state and fMRI literature.
         \label{fig:overallgrowth}
@@ -411,16 +412,17 @@ library was spread over 268 different publication outlets. Nine of the top
 Connectivity, founded in 2011, is the most recent addition.  
 
 %{{{------ Figure 2 -----}}}
-\begin{figure}
+\begin{figure*}
   \begin{center}
     %\includegraphics[]{figures/journal_dist}%
-    \includegraphics[width=\linewidth]{figures/journal_dist}%
+    \includegraphics[]{figures/journal_dist}%
+    %\includegraphics[width=\linewidth]{figures/journal_dist}%
     %\includegraphics[width=.5\linewidth]{figures/overall_growth}%
     \caption{Publication counts by journal.
         \label{fig:journal_dist}
     }
   \end{center}
-\end{figure}
+\end{figure*}
 
 
 The density-equalizing map is shown in Fig. \ref{fig:resting_state_map}.
