--- a/rsbib_paper.tex
+++ b/rsbib_paper.tex
@@ -475,16 +475,16 @@ Growth of the most prevalent clinical terms is shown in Fig.
 co-occur with the ``clinical'' tag.
 
 %{{{------ Figure 4 -----}}}
-\begin{figure}
+\begin{figure*}
   \begin{center}
     %\includegraphics[]{figures/clinical_bytag_hist}%
-    \includegraphics[width=\linewidth]{figures/clinical_bytag_hist}%
+    \includegraphics[]{figures/clinical_bytag_hist}%
     %\includegraphics[width=.5\linewidth]{figures/clinical_bytag_hist}%
     \caption{Most common clinical terms from the resting state literature.
         \label{fig:clinical_bytag_hist}
     }
   \end{center}
-\end{figure}
+\end{figure*}
 
 Fig. \ref{fig:connectome_growth} shows growth of the term ``connectome'' in the
 corpus. Term frequency ($t\!f$), document frequency ($d\!f$), and term
@@ -541,7 +541,7 @@ a faster pace in 2012.
 \begin{figure}
   \begin{center}
     %\includegraphics[]{figures/methods_growth_hist}%
-    \includegraphics[width=\linewidth]{figures/methods_growth_hist}%
+    \includegraphics[]{figures/methods_growth_hist}%
     %\includegraphics[width=.5\linewidth]{figures/methods_growth_hist}%
     \caption{Prevalence and growth of different methods applied in the resting
     state fMRI literature. 
