several changes to figures, added pagerank table

--- a/rsbib_paper.bib
+++ b/rsbib_paper.bib
@@ -138,3 +138,102 @@ pages = {353-360},
 year = {1956}, 
 journal = {Biometrika} 
 }
+
+@Article{Raichle2001,
+   Author="Raichle, M. E.  and MacLeod, A. M.  and Snyder, A. Z.  and Powers, W. J.  and Gusnard, D. A.  and Shulman, G. L. ",
+   Title="{{A} default mode of brain function}",
+   Journal="Proc. Natl. Acad. Sci. U.S.A.",
+   Year="2001",
+   Volume="98",
+   Number="2",
+   Pages="676--682",
+   Month="Jan"
+}
+
+@Article{Greicius2003,
+   Author="Greicius, M. D.  and Krasnow, B.  and Reiss, A. L.  and Menon, V. ",
+   Title="{{F}unctional connectivity in the resting brain: a network analysis of the default mode hypothesis}",
+   Journal="Proc. Natl. Acad. Sci. U.S.A.",
+   Year="2003",
+   Volume="100",
+   Number="1",
+   Pages="253--258",
+   Month="Jan"
+}
+
+@Article{Damoiseaux2006,
+   Author="Damoiseaux, J. S.  and Rombouts, S. A.  and Barkhof, F.  and Scheltens, P.  and Stam, C. J.  and Smith, S. M.  and Beckmann, C. F. ",
+   Title="{{C}onsistent resting-state networks across healthy subjects}",
+   Journal="Proc. Natl. Acad. Sci. U.S.A.",
+   Year="2006",
+   Volume="103",
+   Number="37",
+   Pages="13848--13853",
+   Month="Sep"
+}
+
+@Article{Beckmann2005,
+   Author="Beckmann, C. F.  and DeLuca, M.  and Devlin, J. T.  and Smith, S. M. ",
+   Title="{{I}nvestigations into resting-state connectivity using independent component analysis}",
+   Journal="Philos. Trans. R. Soc. Lond., B, Biol. Sci.",
+   Year="2005",
+   Volume="360",
+   Number="1457",
+   Pages="1001--1013",
+   Month="May"
+}
+
+@Article{Lowe1998,
+   Author="Lowe, M. J.  and Mock, B. J.  and Sorenson, J. A. ",
+   Title="{{F}unctional connectivity in single and multislice echoplanar imaging using resting-state fluctuations}",
+   Journal="Neuroimage",
+   Year="1998",
+   Volume="7",
+   Number="2",
+   Pages="119--132",
+   Month="Feb"
+}
+
+@Article{Greicius2004,
+   Author="Greicius, M. D.  and Srivastava, G.  and Reiss, A. L.  and Menon, V. ",
+   Title="{{D}efault-mode network activity distinguishes {A}lzheimer's disease from healthy aging: evidence from functional {M}{R}{I}}",
+   Journal="Proc. Natl. Acad. Sci. U.S.A.",
+   Year="2004",
+   Volume="101",
+   Number="13",
+   Pages="4637--4642",
+   Month="Mar"
+}
+
+@Article{Biswal2010,
+   Author="Biswal, B. B.  and Mennes, M.  and Zuo, X. N.  and Gohel, S.  and Kelly, C.  and Smith, S. M.  and Beckmann, C. F.  and Adelstein, J. S.  and Buckner, R. L.  and Colcombe, S.  and Dogonowski, A. M.  and Ernst, M.  and Fair, D.  and Hampson, M.  and Hoptman, M. J.  and Hyde, J. S.  and Kiviniemi, V. J.  and Kotter, R.  and Li, S. J.  and Lin, C. P.  and Lowe, M. J.  and Mackay, C.  and Madden, D. J.  and Madsen, K. H.  and Margulies, D. S.  and Mayberg, H. S.  and McMahon, K.  and Monk, C. S.  and Mostofsky, S. H.  and Nagel, B. J.  and Pekar, J. J.  and Peltier, S. J.  and Petersen, S. E.  and Riedl, V.  and Rombouts, S. A.  and Rypma, B.  and Schlaggar, B. L.  and Schmidt, S.  and Seidler, R. D.  and Siegle, G. J.  and Sorg, C.  and Teng, G. J.  and Veijola, J.  and Villringer, A.  and Walter, M.  and Wang, L.  and Weng, X. C.  and Whitfield-Gabrieli, S.  and Williamson, P.  and Windischberger, C.  and Zang, Y. F.  and Zhang, H. Y.  and Castellanos, F. X.  and Milham, M. P. ",
+   Title="{{T}oward discovery science of human brain function}",
+   Journal="Proc. Natl. Acad. Sci. U.S.A.",
+   Year="2010",
+   Volume="107",
+   Number="10",
+   Pages="4734--4739",
+   Month="Mar"
+}
+
+@Article{Seeley2007,
+   Author="Seeley, W. W.  and Menon, V.  and Schatzberg, A. F.  and Keller, J.  and Glover, G. H.  and Kenna, H.  and Reiss, A. L.  and Greicius, M. D. ",
+   Title="{{D}issociable intrinsic connectivity networks for salience processing and executive control}",
+   Journal="J. Neurosci.",
+   Year="2007",
+   Volume="27",
+   Number="9",
+   Pages="2349--2356",
+   Month="Feb"
+}
+@Article{Vincent2007,
+   Author="Vincent, J. L.  and Patel, G. H.  and Fox, M. D.  and Snyder, A. Z.  and Baker, J. T.  and Van Essen, D. C.  and Zempel, J. M.  and Snyder, L. H.  and Corbetta, M.  and Raichle, M. E. ",
+   Title="{{I}ntrinsic functional architecture in the anaesthetized monkey brain}",
+   Journal="Nature",
+   Year="2007",
+   Volume="447",
+   Number="7140",
+   Pages="83--86",
+   Month="May"
+}
+
