--- a/rsbib_paper.tex
+++ b/rsbib_paper.tex
@@ -447,16 +447,16 @@ of correspondence addresses, respectively.
 more attractive.} 
 
 %{{{------ Figure 3 -----}}}
-\begin{figure}
+\begin{figure*}
   \begin{center}
     %\includegraphics[]{figures/resting_state_map}%
     \includegraphics[width=\linewidth]{figures/resting_state_map}%
     %\includegraphics[width=.5\linewidth]{figures/resting_state_map}%
-    \caption{Amount of resting state publications by country.
+    \caption{Number of resting state publications by country.
         \label{fig:resting_state_map}
     }
   \end{center}
-\end{figure}
+\end{figure*}
 
 
 \subsection{Term Frequency Analysis}
