--- a/rsbib_paper.tex
+++ b/rsbib_paper.tex
@@ -450,7 +450,7 @@ more attractive.}
 \begin{figure*}
   \begin{center}
     %\includegraphics[]{figures/resting_state_map}%
-    \includegraphics[width=\linewidth]{figures/resting_state_map}%
+    \includegraphics[width=.9\linewidth]{figures/resting_state_map}%
     %\includegraphics[width=.5\linewidth]{figures/resting_state_map}%
     \caption{Number of resting state publications by country.
         \label{fig:resting_state_map}
